# DeepBlueSea

./: README.md
Chapter-1/.ipynb_checkpoints/: କୋଏଲ_ନଦୀ_Chapter-1_introduction-checkpoint.ipynb
Tensorflow_A_SMALL_Step/: NeuralNetworks.ipynb
caffe_wine/: .~lock.helpdoc.doc#  CMakeLists.txt  main.cpp
caffe_wine/include/caffe/: base.h  base.hpp  blob.h  logging.h  logging.hpp
caffe_wine/src/: CMakeLists.txt  base.cpp  blob.cpp  logging.cpp
caffe_wine/tests/: CMakeLists.txt  simple_test.hpp  testBlob.cpp  test_base.cpp  test_logging.cpp
pytorch-rmd/: README.md  setup.py
pytorch-rmd/.github/workflows/: python-app.yml
pytorch-rmd/ag/: __init__.py
pytorch-rmd/ag/autograd/: __init__.py  graph.py  node.py  tensor.py  utils.py
pytorch-rmd/ag/nn/: __init__.py  activations.py  checkpoint.py  loss.py  model.py  optim.py  utils.py
pytorch-rmd/ag/nn/layers/: __init__.py  conv.py  misc.py
pytorch-rmd/docs/source/: conf.py
pytorch-rmd/examples/gans/: basic.ipynb
pytorch-rmd/tests/: _setup.py  model_params.pkl  test.py  test_activations.py  test_basics.py  test_layers.py  test_loss.py
